[package]
name = "listener-app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anchor-lang = { version = "=0.29", features = ["event-cpi", "init-if-needed"] }
anchor-syn = "0.29"
chrono = "0.4"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "0.99", features = ["display"] }
env_logger = "0.11"
ethabi = "18.0"
hex = "0.4"
log = "0.4"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
solana-client = "1.16"
solana-sdk = "1.16"
solana-tools = { path = "../solana-tools" }
tokio = { version = "1.36", features = ["time", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
thiserror = "1.0"
